[project]
name = "mutune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "matplotlib>=3.10.3",
    "mup>=1.0.0",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
